--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-SITE_NAME_HEADER=Digital Garden
-SITE_MAIN_LANGUAGE=en
+SITE_NAME_HEADER=周俊文的知识库
+SITE_MAIN_LANGUAGE=eg
 SITE_BASE_URL=obsidian-bulid-by-zjw.netlify.app
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
@@ -11,6 +11,8 @@ NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
+THEME=https://raw.githubusercontent.com/krios2146/obsidian-theme-github/HEAD/theme.css
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=true
 dgShowBacklinks=true
